[package]
name = "build_id"
version = "0.3.0"
license = "MIT OR Apache-2.0"
authors = [
  "Kaspar Schleiser <kaspar@schleiser.de>",
  "Alec Mocatta <alec@mocatta.net>",
]
categories = ["development-tools", "rust-patterns"]
keywords = ["build", "buildid", "uuid"]
description = """
Obtain a UUID uniquely representing the build of the current binary.
"""
repository = "https://github.com/kaspar030/build_uuid"
homepage = "https://github.com/kaspar030/build_uuid"
documentation = "https://docs.rs/build_uuid/0.3.0"
readme = "README.md"
links = "build_uuid"
build = "build.rs"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
byteorder = "1.4.3"
once_cell = "1.15.0"
twox-hash = { version = "1.6.3", default-features = false }
uuid = "1.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
